<resources>
    <string name="app_name">E-book Ardberry Technology Pvt. Ltd.</string>
    <string name="about">About Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="navigation_image">navigation image</string>
    <string name="slider">slider</string>
    <string name="ardberry_discription_less">Ardberry Technology Pvt Ltd is one of the promising automation solutions and consultancy company to the Architectural firms and design Mavens. Ardberry’s clients are architectural and techno-enthusiast organisations across the globe who use our niche expertise in the solution designing as well as Enterprise...</string>
    <string name="ardberry_discription">Ardberry Technology Pvt Ltd is one of the promising automation solutions and consultancy company to the Architectural firms and design Mavens. Ardberry’s clients are architectural and techno-enthusiast organisations across the globe who use our niche expertise in the solution designing as well as Enterprise project implementations. We are aesthete with heightened perception of light and moving architecture in its various forms so we do research in the field of architectural automation so that we can provide sustainable competitive solution in the realm of infrastructure because we interested in the building that looks different and perform too. We have an approaching presence with offices in Jaipur and Odisha. Ardberry Technology also organize career oriented training programs and projects for Tech hungers in the field of Robotics Automation and Internet of things for high school students at affordable cost and benchmark quality to impart more than something from academics to the insights of tomorrow at their malleable years.</string>
    <string name="few_words_text">A Few Words About Us</string>
    <string name="gallery_one">Gallery one</string>
    <string name="image">image</string>
    <string name="houses_book">Houses Book</string>
    <string name="image_of_book">Image of book</string>
    <string name="book_name">Book Name</string>
    <string name="like">Like</string>
    <string name="watch_later">Watch Later</string>
    <string name="read">Read</string>
    <string name="signup">Signup</string>
    <string name="logout_google_account">Logout Google Account</string>
    <string name="my_account">My Account</string>
    <string name="please_click_the_above_button_to_sign_in">Please click the above button to sign in.</string>
    <string name="please_click_on_above_button_to_show_your_account_details">Please click on above button to show your account details</string>
    <string name="account">My Account</string>
    <string name="email">Email</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="subject">Subject</string>
    <string name="enter_your_feed_back_details">Enter your feed back details</string>
    <string name="details">Details</string>
    <string name="submit">Submit</string>
    <string name="imageview">ImageView</string>
    <string name="gallery_2">Gallery two</string>
    <string name="read_more">Read more…</string>
    <string name="read_less">Read less…</string>
    <string name="ardberry_technology_pvt_ltd">Ardberry Technology Pvt. Ltd.</string>
    <string name="home">Home</string>
    <string name="most_liked_magazines">Most Liked Magazines</string>
    <string name="bookname">Bookname</string>
    <string name="_0_likes">0   Likes</string>
</resources>
