<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainDrawer3"
    tools:context=".Feedback">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include layout="@layout/navigation_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/lato_light"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_your_email_here"
            android:id="@+id/email_feedback_edittext"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:fontFamily="@font/lato_light"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="28dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:hint="Subject"
            android:background="@drawable/edit_text_background"
            android:id="@+id/subject_feedback_edittext"
            android:padding="5dp"
            android:inputType="textEmailSubject"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:fontFamily="@font/lato_light"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="28dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:hint="@string/enter_your_feed_back_details"
            android:id="@+id/detail_feedback_edittext"
            android:padding="5dp"
            android:inputType="textMultiLine"
            android:background="@drawable/edit_text_background"
            android:gravity="start"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:id="@+id/submit_button_feedback"
            android:background="#ffc300"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu_feedback"
        android:id="@+id/mainNavigationBar"
        app:headerLayout="@layout/navigation_layout_feedback"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>