<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_up_bg"
    tools:context=".PopUpLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/progress_circular_pop_up"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            android:background="#000000"
            android:layout_marginTop="40dp"
            app:cardElevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_of_book"
                android:id="@+id/book_id"

                />



        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:shadowDy="2"
            android:id="@+id/book_name_pop_up"
            android:shadowDx="2"
            android:shadowRadius="6"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:lottie_autoPlay="false"
                android:layout_marginTop="10dp"
                app:lottie_fileName="heart5.json"
                android:layout_weight="1"
                android:onClick="like"
                android:id="@+id/like_pop_up"
                app:lottie_loop="false"
                />
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="0dp"
                android:layout_height="55dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:onClick="readPop"
                android:id="@+id/read_pop_up"
                app:lottie_fileName="read.json"
                android:layout_weight="1"
                />
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="0dp"
                android:layout_height="55dp"
                app:lottie_autoPlay="false"
                app:lottie_fileName="watchlater.json"
                android:layout_weight="1"
                android:id="@+id/bookmark_pop_up"
                android:onClick="bookmark"
                app:lottie_loop="false"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/like"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/lato_light"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/read"
                android:fontFamily="@font/lato_light"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/watch_later"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/lato_light"
                android:textColor="#000000"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/_0_likes"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/book_number_of_likes_pop_up"
            android:fontFamily="@font/lato_light"
            android:textColor="#000000"
            />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>