<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainDrawer">



    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <include layout="@layout/navigation_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="56dp">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description_main">

                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="#123455"
                    />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="300dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/few_words_text"
                    android:fontFamily="@font/lato"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="17sp"
                    android:visibility="visible"
                    android:layout_marginTop="25dp"
                    android:textColor="#000000"
                    android:id="@+id/few_words_text"
                    android:layout_marginStart="20dp" />


                <View
                    android:layout_width="178dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/few_words_text"
                    android:background="@drawable/underline_layout"
                    android:layout_marginLeft="20dp"
                    />

                <TextView
                    android:id="@+id/textDiscriptionArdberry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/few_words_text"
                    android:lineSpacingMultiplier="1.2"
                    android:lineSpacingExtra="6dp"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/ardberry_discription_less"
                    android:textColor="#000000"
                    android:layout_marginBottom="20dp"
                    android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/read_more"
                        android:layout_below="@id/textDiscriptionArdberry"
                        android:layout_marginTop="-22dp"
                        android:gravity="end"
                        android:fontFamily="@font/lato"
                        android:id="@+id/read_more_text"
                        android:onClick="ReadMoreArdberry"
                        android:layout_marginRight="18dp"
                        android:textColor="@color/colorPrimary"
                        />

                    <include
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        layout="@layout/activity_most_liked_books"
                        android:id="@+id/most_liked_books_gallery"
                        android:layout_below="@id/read_more_text"
                        android:layout_marginTop="25dp"/>


                    <TextView
                        android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery_one"
                    android:fontFamily="@font/lato"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="17sp"
                    android:visibility="visible"
                    android:layout_below="@id/most_liked_books_gallery"
                    android:layout_marginTop="25dp"
                    android:textColor="#000000"
                    android:id="@+id/gallery_0_text"/>


                <View
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/gallery_0_text"
                    android:background="@drawable/underline_layout"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/gallery_0_underline"
                    />


                    <RelativeLayout
                        android:id="@+id/gallery_0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/gallery_0_underline">


                        <include
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            layout="@layout/gallery_one_layout"/>
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gallery_2"
                        android:fontFamily="@font/lato"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="17sp"
                        android:visibility="visible"
                        android:layout_below="@id/gallery_0"
                        android:layout_marginTop="25dp"
                        android:textColor="#000000"
                        android:id="@+id/gallery_1_text"/>


                    <View
                        android:layout_width="90dp"
                        android:layout_height="2dp"
                        android:layout_below="@id/gallery_1_text"
                        android:background="@drawable/underline_layout"
                        android:layout_marginLeft="20dp"
                        android:id="@+id/gallery_1_underline"
                        />

                    <RelativeLayout
                        android:id="@+id/gallery_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/gallery_1_underline">


                        <include
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            layout="@layout/gallery_two_layout"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Gallery three"
                        android:fontFamily="@font/lato"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="17sp"
                        android:visibility="visible"
                        android:layout_below="@id/gallery_1"
                        android:layout_marginTop="25dp"
                        android:textColor="#000000"
                        android:id="@+id/gallery_2_text"/>


                    <View
                        android:layout_width="90dp"
                        android:layout_height="2dp"
                        android:layout_below="@id/gallery_2_text"
                        android:background="@drawable/underline_layout"
                        android:layout_marginLeft="20dp"
                        android:id="@+id/gallery_2_underline"
                        />

                    <RelativeLayout
                        android:id="@+id/gallery_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/gallery_2_underline">



                       <include
                           android:layout_height="wrap_content"
                           android:layout_width="match_parent"
                           layout="@layout/gallery_three_layout"/>
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="#f2f2f2"
                        android:layout_below="@id/gallery_2"
                        android:layout_alignParentBottom="true"
                        android:id="@+id/footerMain">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal"
                            android:id="@+id/contacticonsmain"
                            android:gravity="center"
                            android:layout_marginHorizontal="100dp">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/facebookicon"
                                android:id="@+id/facebookiconmain"
                                android:layout_margin="4dp"/>

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:id="@+id/instagramiconmain"
                                android:src="@drawable/instagramicon"
                                android:layout_margin="4dp"/>

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:id="@+id/twittericonmain"
                                android:src="@drawable/twittericon"
                                android:layout_margin="4dp"/>

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:id="@+id/linkediniconmain"
                                android:src="@drawable/linkedinicon"
                                android:layout_margin="4dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_below="@id/contacticonsmain">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Powered by "
                                android:fontFamily="@font/lato_light"
                                android:textColor="#000000"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ardberry_technology_pvt_ltd"
                                android:shadowRadius="2"
                                android:shadowColor="#000000"
                                android:shadowDx="0"
                                android:shadowDy="0"
                                android:fontFamily="@font/lato_light"
                                android:textColor="#000000"/>
                        </LinearLayout>
                    </RelativeLayout>


                </RelativeLayout>
            </ScrollView>

            </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_fileName="loadingmain.json"
        android:background="#38c172"
        app:lottie_loop="true"
        android:visibility="gone"
        android:id="@+id/loadingmainlottie"
        />
    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu_home"
        android:id="@+id/mainNavigationBar"
        app:headerLayout="@layout/navigation_layout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>